# gravity

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-server.yml  deploy-web.yml  release.yml
server/: Cargo.toml  README.md  wrangler.toml
server/migrations/: 0001_initial.sql
server/src/: db.rs  lib.rs  routes.rs  types.rs  validation.rs
src/: game.rs  lib.rs  main.rs
src/ai/: decision.rs  mod.rs  personality.rs  steering.rs  targeting.rs
src/audio/: depth_audio.rs  mod.rs  native_audio.rs  sfx.rs  synth.rs  web_audio.rs
src/camera/: mod.rs  tracking.rs
src/entities/: black_hole.rs  bot.rs  bot_archetypes.rs  effects.rs  mod.rs  projectile.rs  ship.rs
src/hud/: clocks.rs  gauges.rs  mod.rs  radar.rs  tempo.rs  trajectory.rs  warnings.rs
src/input/: keyboard_mouse.rs  mapping.rs  mod.rs  touch.rs
src/leaderboard/: local.rs  mod.rs  online.rs  replay.rs  score.rs
src/levels/: config.rs  difficulty.rs  generator.rs  mod.rs  progression.rs
src/narrative/: briefing.rs  dialogue.rs  mod.rs  radio.rs  script.rs  story_state.rs
src/persistence/: mod.rs  native_save.rs  web_save.rs
src/physics/: collision.rs  dilation.rs  gravity.rs  integrator.rs  mod.rs  orbit.rs
src/platform/: mod.rs  native.rs  web.rs
src/rendering/: black_hole.rs  gpu.rs  hud_render.rs  mod.rs  projectiles.rs  ships.rs  text.rs
src/rendering/pipelines/: beam.rs  mod.rs  particle.rs  postprocess.rs  sprite.rs  starfield.rs  trail.rs
src/shaders/: beam.wgsl  blackhole.wgsl  hud.wgsl  particle.wgsl  postprocess.wgsl  sprite.wgsl  starfield.wgsl  trail.wgsl
src/util/: color.rs  mod.rs  rng.rs  vec2.rs
src/weapons/: gravity_bomb.rs  impulse_rocket.rs  mass_driver.rs  mod.rs  photon_lance.rs  railgun.rs  tidal_mine.rs
web/: bootstrap.js  index.html  style.css
